--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -13,4 +13,8 @@
   .app-footer {
     margin-top: auto; /* Push footer to the bottom */
   }
-  
+
+  .navLogo{
+    width: 70px;
+    height: 50px;
+  }
